--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ footer {
   .contacto {
     margin-left: 30px;
     text-align: left;
+    margin-bottom: 15px; /* Espacio en la parte inferior */ 
   }
   
 
